--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
         <p><h3 id="lugarNacimiento"> Lugar de Nacimiento: Coronado</h3></p>
     <nav id="menu">
       <ul id="itemsMenu">
-        <li><a href="#">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="educacion.html"> Educación </a></li>
         <li><a href="experiencia.html">Experiencia </a></li>
       </ul>
     </nav>
     <section>
       <article class="artPerfil">
+        <p><h3>Perfil</h3> </p>
         <p>Tengo un titulo universitario de la Universidad de Costa Rica en la que realice una practica empresarial, además, llevo trabajando 3 años como Ingeniero de Cálidad de Software, realice testing tanto en routers y ahora en sistemas bancarios en Costa Rica</p>
+        <p><h3>Idiomas</h3></p>
+        <p>
+          <ul id="listaIdiomas">
+            <li>Español escrito 100%</li>
+            <li>Español habla 100%</li>
+            <li>Ingles escrito 50%</li>
+            <li>Ingles habla 40%</li>
+          </ul>
+        </p>
       </article>
       <article class="imagen">
-        <img src="images/calidadSoftware.png" alt="Calidad de Software" id="imgCalidad" height="150px">
+        <img src="images/calidadSoftware.png" alt="Calidad de Software" id="imgCalidad" height="300px">
       </article>
     </section>
   </body>
