--- a/educacion.html
+++ b/educacion.html
@@ -17,7 +17,7 @@
         <p><h3 id="lugarNacimiento"> Lugar de Nacimiento: Coronado</h3></p>
     <nav id="menu">
       <ul id="itemsMenu">
-        <li><a href="#">Inicio</a></li>
+        <li><a href="index.html#">Inicio</a></li>
         <li><a href="educacion.html"> Educación </a></li>
         <li><a href="experiencia.html">Experiencia </a></li>
       </ul>
