se corrige error del video que no se habia puesto el tipo de formato

--- a/experiencia.html
+++ b/experiencia.html
@@ -23,12 +23,17 @@
       </ul>
     </nav>
     <h2>Experiencia</h2>
-    <video id="videoExperiencia"controls width="500px" autoplay title="Video de Experiencia" poster="qualityAssurance.jpg">
-      <source src="media/experiencia.mp4" type="video/">
-    </video>
-    <audio id="audioPasatiempos" src="media/audioNextU.MP3" controls autoplay>
-      Pasatiempos y habilidades.
-    </audio>
+    <p>
+      <video id="videoExperiencia"controls width="500px" autoplay title="Video de Experiencia" poster="qualityAssurance.jpg">
+        <source src="media/experiencia.mp4" type="video/mp4">
+      </video>
+    </p>
+    <p>
+      <audio id="audioPasatiempos" src="media/audioNextU.MP3" controls preload="auto">
+        Pasatiempos y habilidades.
+      </audio>
+    </p>
+
   </body>
   <footer>
     <p>Derechos reservados</p>
