titulos del audio y video mas txt url git proyecto

--- a/experiencia.html
+++ b/experiencia.html
@@ -23,11 +23,13 @@
       </ul>
     </nav>
     <h2>Experiencia</h2>
+    <h3>Video - Experiencia y Estudio</h3>
     <p>
       <video id="videoExperiencia"controls width="500px" autoplay title="Video de Experiencia" poster="qualityAssurance.jpg">
         <source src="media/experiencia.mp4" type="video/mp4">
       </video>
     </p>
+    <h3>Audio acerca de mis pasatiempos</h3>
     <p>
       <audio id="audioPasatiempos" src="media/audioNextU.MP3" controls preload="auto">
         Pasatiempos y habilidades.
